# Puzzle-loop-solver

./: CMakeLists.txt  README.md
src/: autoRun.cpp  autoRun.h  interface.cpp  interface.h  main.cpp  readHtml.cpp  readHtml.h  solver.cpp  solver.h  submit.cpp  submit.h
